--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/PaxoJW/Todo#readme",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "dev-server": "^0.2.0",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.102.1",
